# bpf-rootkit-workshop

./: .gitmodules  LICENSE  README.md
introduction/: slides.html
introduction/materials/aya_rust/xdp/: Cargo.toml  README.md
introduction/materials/aya_rust/xdp/xdp/: Cargo.toml
introduction/materials/aya_rust/xdp/xdp-common/: Cargo.toml
introduction/materials/aya_rust/xdp/xdp-ebpf/: Cargo.toml
introduction/materials/aya_rust/xdp/xdp-ebpf/src/: main.rs
introduction/materials/aya_rust/xdp/xdp/src/: main.rs
introduction/materials/aya_rust/xdp/xtask/src/: build_ebpf.rs  run.rs
introduction/materials/execa/: LICENSE  a.c  execa.bpf.c  execa.c  execa_common.h
introduction/materials/libbpf_c/exec/: Makefile  exec.bpf.c  exec.c
introduction/materials/libbpf_c/xdp/: Makefile  counter.bpf.c  vmlinux.h
introduction/materials/sudosnoop/: sudosnoop.bpf.c
introduction/solutions/execa/: README.md  a.c  execa.bpf.c  execa_user.h
introduction/solutions/sudosnoop/: README.md  sudosnoop.bpf.c  sudosnoop.c  sudosnoop.h
live_forensics/: slides.html
live_forensics/materials/: rkfd.sh
memory_forensics/: slides.html
memory_forensics/materials/: binwalk_signature_BpfElf  extract-ikconfig  parse_pcap.py  yara_rule_BpfElf  yara_rule_EmbeddedBpfElf
memory_forensics/solutions/: exercise_solutions.md
